--- a/index.html
+++ b/index.html
@@ -36,23 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    힐로피아란?
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item js-scroll-trigger" href="subpage">hillopia_S</a>
-                        <a class="dropdown-item js-scroll-trigger" href="subpage">hillopia_F</a>
-                        <a class="dropdown-item js-scroll-trigger" href="subpage">hillopia_C</a>
-                    </div>
+                    <a class="nav-link js-scroll-trigger" href="#services">힐로피아란?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger disabled" href="index#about">회사소개</a>
+                    <a class="nav-link js-scroll-trigger" href="#about">회사소개</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger disabled" href="index">연대표</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger disabled" href="index#contact">연락하기</a>
+                    <a class="nav-link js-scroll-trigger" href="#contact">연락하기</a>
                 </li>
             </ul>
         </div>
@@ -91,7 +81,7 @@
                         Great Mountain International Wellness Co. Ltd와 전략적 제휴를 통해
                         국내 및 아시아 (Wellness)시장에 대한 컨설팅을 제공하고 있습니다.
                         <br><br>
-                        <a href="subpage.html" style="color:#7030A0;"><i class="fas fa-angle-double-left"></i> <strong>더보기</strong> <i class="fas fa-angle-double-right"></i></a>
+                        <!--<a href="subpage.html" style="color:#7030A0;"><i class="fas fa-angle-double-left"></i> <strong>더보기</strong> <i class="fas fa-angle-double-right"></i></a>-->
                     </p>
                 </div>
             </div>
@@ -106,12 +96,12 @@
                     <p class="text-muted">
                         “힐로피아_에프＂는 친환경 농산물 프로젝트로써 무농약, 무공해, 무병해를
                         기본으로 식물을 최적의 환경에서 성장하게 함으로써 그 태초의 맛과 영양을 그대로 소비자에게 전달하고 있습니다.
-                        <!--<br><br>
+                        <br><br>
                         온라인 쇼핑몰:
-                        <a href="http://hillo.shop">www.hillo.shop</a>-->
+                        <a href="http://hillo.shop">www.hillo.shop</a>
                         
                         <br><br>
-                        <a href="subpage.html"><i class="fas fa-angle-double-left"></i> <strong>더보기</strong> <i class="fas fa-angle-double-right"></i></a>
+                        <!--<a href="subpage.html"><i class="fas fa-angle-double-left"></i> <strong>더보기</strong> <i class="fas fa-angle-double-right"></i></a>-->
                     </p>
                 </div>
                 <div class="col-sm-6" id="secondHalf">
@@ -130,7 +120,7 @@
                         “힐로피아_씨이”는 주한 외국인들 대상 농촌체험 프로그램을 운영하고, 농촌 다문화가정 및 기타 외국인 노동자를 대상으로 한국어 교육등을 실행하면서 함께 발전하는 대한민국 농업이 되도 록 지원하고 있습니다.
                         
                         <br><br>
-                        <a href="subpage.html" style="color:#FF9900;"><i class="fas fa-angle-double-left"></i> <strong>더보기</strong> <i class="fas fa-angle-double-right"></i></a>
+                        <!--<a href="subpage.html" style="color:#FF9900;"><i class="fas fa-angle-double-left"></i> <strong>더보기</strong> <i class="fas fa-angle-double-right"></i></a>-->
                     </p>
                 </div>
             </div>
